@@ -52,6 +52,7 @@ Fixes:
    of minor bugs. [MG]
  * rand(-X, -Y) where -X > -Y was broken. [SW]
  * Fix a couple of minor memory leaks. [SW]
+ * Possible crashbug in switch(), @switch, iter() and @dolist fixed. [MG]
 
 Version 1.8.4 patchlevel 3                                 Mar 18,  2011
 
